--- a/src/styles/ng-notify.sass
+++ b/src/styles/ng-notify.sass
@@ -1,5 +1,11 @@
 /* System notifications */
 .ngn
+
+    box-sizing: border-box
+
+    *, *:before, *:after
+        box-sizing: inherit
+
     color: #FFF
     cursor: default
     display: none
@@ -8,7 +14,7 @@
     opacity: 1
     padding: 25px 80px
     position: fixed
-    right: 0
+    width: 100%
     text-align: center
 
     -webkit-touch-callout: none
@@ -18,6 +24,42 @@
     -ms-user-select: none
     user-select: none
     z-index: 9999
+
+    &.pre-op-1
+        opacity: 1
+
+    &.pre-op-0
+        opacity: 0
+
+    &.fade-out
+        transition: opacity 0.5s ease-in 0s
+        -webkit-transition: opacity 0.5s ease-in 0s
+        -moz-transition: opacity 0.5s ease-in 0s
+        -o-transition: opacity 0.5s ease-in 0s
+        opacity: 0
+
+    &.fade-in
+        transition: opacity 0.5s ease-in 0s
+        -webkit-transition: opacity 0.5s ease-in 0s
+        -moz-transition: opacity 0.5s ease-in 0s
+        -o-transition: opacity 0.5s ease-in 0s
+        opacity: 1
+
+    &.hide-left
+        transition: left 0.5s ease-in 0s, opacity 0.5s ease-in 0s
+        -webkit-transition: left 0.5s ease-in 0s, opacity 0.5s ease-in 0s
+        -moz-transition: left 0.5s ease-in 0s, opacity 0.5s ease-in 0s
+        -o-transition: left 0.5s ease-in 0s, opacity 0.5s ease-in 0s
+        left: 100%
+        opacity: 0
+
+    &.hide-right
+        transition: left 0.5s ease-in 0s, opacity 0.5s
+        -webkit-transition: left 0.5s ease-in 0s, opacity 0.5s
+        -moz-transition: left 0.5s ease-in 0s, opacity 0.5s
+        -o-transition: left 0.5s ease-in 0s, opacity 0.5s
+        left: -100%
+        opacity: 0
 
 .ngn-top
     top: 0
